# zenn-static-embedding-duckdb

./: .gitignore  README.md  consts.py  cos_similar.py  cos_similar_duckdb.py  duckdb_hnsw.py  hello.py  livedoor.py  livedoor2.py  pyproject.toml  umap_plot.py  utils.py  vector.py
